--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -11,18 +11,22 @@
         android:id="@+id/imageView"
         android:layout_width="405dp"
         android:layout_height="294dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="24dp"
+        android:layout_marginBottom="69dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/banking"
-        tools:layout_editor_absoluteY="336dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@drawable/banking" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="390dp"
-        android:layout_height="79dp"
+        android:layout_width="380dp"
+        android:layout_height="70dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="10dp"
         android:fontFamily="serif"
         android:text="  WELCOME"
@@ -34,19 +38,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="31dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="108dp"
+        android:layout_height="95dp"
+        android:layout_marginStart="166dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="165dp"
         android:fontFamily="serif"
         android:text="TO"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="60sp"
         android:typeface="serif"
-        tools:layout_editor_absoluteX="166dp"
-        tools:layout_editor_absoluteY="174dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
