--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,44 +5,56 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".Signup">
+    tools:context=" .Signup">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/signuptitle"
-        android:text="Sign up"
-        android:textSize="35dp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp"
         android:gravity="center"
-        android:layout_margin="25dp"/>
+        android:text="Sign up"
+        android:fontFamily="serif"
+        android:textColor="@color/white"
+        android:textSize="35dp"
+        android:textStyle="bold" />
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/username"
-        android:layout_below="@+id/signuptitle"
-        android:background="#30ffffff"
-        android:hint="Username"
-        android:textColorHint="@color/white"
-        android:layout_margin="10dp"
-        android:padding="20dp"
-        android:drawableLeft="@drawable/baseline_person_24"
-        android:drawablePadding="20dp"/>
-
-    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/email"
-        android:layout_below="@+id/username"
+        android:layout_below="@+id/signuptitle"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="#30ffffff"
-        android:hint="Email"
-        android:textColorHint="@color/white"
-        android:layout_margin="10dp"
+        android:drawableLeft="@drawable/baseline_person_24"
+        android:drawablePadding="20dp"
+        android:hint="Username"
+        android:fontFamily="serif"
         android:padding="20dp"
+        android:textColorHint="@color/white" />
+
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/username"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#30ffffff"
         android:drawableLeft="@drawable/baseline_email_24"
-        android:drawablePadding="20dp"/>
+        android:drawablePadding="20dp"
+        android:hint="Email"
+        android:fontFamily="serif"
+        android:padding="20dp"
+        android:textColorHint="@color/white" />
 
     <EditText
         android:layout_width="match_parent"
@@ -53,6 +65,7 @@
         android:hint="password"
         android:textColorHint="@color/white"
         android:layout_margin="10dp"
+        android:fontFamily="serif"
         android:padding="20dp"
         android:drawableLeft="@drawable/baseline_password_24"
         android:drawablePadding="20dp"
@@ -60,10 +73,11 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/repassword"
+        android:id="@+id/confirmpassword"
         android:layout_below="@+id/password"
         android:background="#30ffffff"
-        android:hint="re-password"
+        android:hint="Confirm Password"
+        android:fontFamily="serif"
         android:textColorHint="@color/white"
         android:layout_margin="10dp"
         android:padding="20dp"
@@ -77,46 +91,18 @@
         android:id="@+id/signupbtn"
         android:text="@string/register"
         android:textSize="25sp"
-        android:layout_below="@id/repassword"
+        android:fontFamily="serif"
+        android:layout_below="@id/confirmpassword"
         android:layout_centerHorizontal="true"
         android:backgroundTint="@color/design_default_color_secondary"
         android:layout_margin="20dp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/info"
-        android:layout_above="@id/socialmediaicon"
-        android:text="or sign up with"
-        android:layout_centerHorizontal="true"/>
 
 
- <LinearLayout
+    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/socialmediaicon"
-     android:layout_alignParentBottom="true">
-
-     <ImageView
-         android:layout_width="50dp"
-         android:layout_height="50dp"
-         android:layout_margin="20dp"
-         android:src="@drawable/google"/>
-     <ImageView
-         android:layout_width="50dp"
-         android:layout_height="50dp"
-         android:layout_margin="20dp"
-         android:src="@drawable/facebook"/>
-     <ImageView
-         android:layout_width="50dp"
-         android:layout_height="50dp"
-         android:layout_margin="20dp"
-         android:src="@drawable/instagram"/>
-
-     <ImageView
-         android:layout_width="50dp"
-         android:layout_height="50dp"
-         android:layout_margin="20dp"
-         android:src="@drawable/twitter" />
- </LinearLayout>
+     android:layout_alignParentBottom="true"
+        android:orientation="horizontal" />
 
 </RelativeLayout>
