--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -5,19 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=" .signup">
+    tools:context=".Signup">
 
     <TextView
         android:id="@+id/signuptitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="25dp"
+        android:layout_height="100dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/title_back_2"
+        android:fontFamily="serif"
         android:gravity="center"
         android:text="Sign up"
-        android:fontFamily="serif"
         android:textColor="@color/white"
         android:textSize="35dp"
         android:textStyle="bold" />
@@ -104,7 +102,7 @@
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/signupbtn"
+        android:id="@+id/register"
         android:text="@string/register"
         android:textSize="25sp"
         android:fontFamily="serif"
