--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -5,8 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/inside_background"
-    tools:context=".About_us">
-
-
-
-</RelativeLayout>
+    tools:context=".About_us"/>
