--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -5,4 +5,85 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/inside_background"
-    tools:context=".About_us"/>
+    tools:context=".About_us">
+
+    <TextView
+        android:id="@+id/aboutus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/title_back_2"
+        android:fontFamily="serif"
+        android:gravity="center"
+        android:text="ABOUT US"
+        android:textColor="@color/material_dynamic_neutral_variant100"
+        android:textSize="40dp"
+        android:textStyle="bold" >
+
+    </TextView>
+    <TextView
+        android:id="@+id/about_HEY"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/aboutus"
+        android:layout_margin="10dp"
+        android:fontFamily="serif"
+        android:text="HEY!!! WELCOME"
+        android:textColor="@color/material_dynamic_neutral_variant100"
+        android:textStyle="bold" >
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/about_content2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/about_HEY"
+        android:layout_margin="10dp"
+        android:fontFamily="serif"
+        android:text="The app is collectively of features commonly used in banking .The transaction and loan credibility can be easily checked with having a registration of account (signup/login) which also further password protected."
+        android:textColor="@color/material_dynamic_neutral_variant100"
+        android:textStyle="bold" >
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/about_content3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/about_content2"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="serif"
+        android:text="The appication developed by Rohan Bhargava (211b259),Rudra Srivastava (211b260),Sachin Singh (211b261). The idea and guidance uder the supervision of Dr.Prateek Pandey (CSE)."
+        android:textColor="@color/material_dynamic_neutral_variant100"
+        android:textStyle="bold">
+
+    </TextView>
+
+    <TextView
+        android:id="@+id/about_content4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/about_content3"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="serif"
+        android:gravity="bottom"
+        android:text="THANKS!!! For using the app! For further feedback check out contact us."
+        android:textColor="@color/material_dynamic_neutral_variant100"
+        android:textStyle="bold">
+
+    </TextView>
+
+
+
+</RelativeLayout>
