--- a/app/src/main/res/layout/activity_add_money.xml
+++ b/app/src/main/res/layout/activity_add_money.xml
@@ -22,22 +22,7 @@
         android:textColor="@color/material_dynamic_neutral_variant100"
         android:textSize="40dp"
         android:textStyle="bold" />
-    <EditText
-        android:id="@+id/send_to_account_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/title"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="#30ffffff"
-        android:drawableLeft="@drawable/baseline_person_24"
-        android:drawablePadding="20dp"
-        android:hint="Account Number"
-        android:fontFamily="serif"
-        android:padding="20dp"
-        android:textColorHint="@color/white" />
+
     <EditText
         android:id="@+id/send_pass"
         android:layout_width="match_parent"
@@ -77,7 +62,7 @@
         android:id="@+id/add_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/amount_addgit"
+        android:layout_below="@id/amount_add"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
