--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -100,16 +100,19 @@
         android:inputType="textPassword"/>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/register"
-        android:text="@string/register"
-        android:textSize="25sp"
-        android:fontFamily="serif"
         android:layout_below="@id/confirmpassword"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@color/design_default_color_secondary"
-        android:layout_margin="20dp"/>
+        android:fontFamily="serif"
+        android:text="@string/register"
+        android:textSize="25sp" />
 
 
     <LinearLayout
