--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/inside_background"
-    tools:context=" .Login">
+    tools:context=".Login_page">
 
     <TextView
         android:id="@+id/signintocontinue"
@@ -82,7 +82,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/design_default_color_secondary"
+        android:backgroundTint="@color/material_dynamic_primary80"
         android:fontFamily="serif"
         android:text="LOGIN"
         android:textSize="25sp" />
@@ -113,7 +113,7 @@
         android:layout_marginEnd="35dp"
         android:layout_marginBottom="50dp"
         android:layout_alignParentRight="true"
-        android:backgroundTint="@color/design_default_color_secondary"
+        android:backgroundTint="@color/material_dynamic_primary80"
         android:fontFamily="serif"
         android:text="SIGNUP"
         android:textSize="15sp" />
