Account_details with database

--- a/app/src/main/res/layout/activity_account_details.xml
+++ b/app/src/main/res/layout/activity_account_details.xml
@@ -29,23 +29,29 @@
             android:id="@+id/name1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:drawablePadding="5sp"
             android:layout_below="@+id/Account_details"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:drawablePadding="5sp"
             android:fontFamily="serif"
-            android:text="Name :"
             android:padding="7dp"
+            android:text="Name :"
+            android:textColor="@color/white"
             android:textSize="25sp"
-            android:textStyle="bold"
-            android:textColor="@color/white" />
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/name_show"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#30ffffff"
-            android:layout_margin="10dp"
             android:layout_below="@+id/name1"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="10dp"
+            android:background="#30ffffff"
             android:fontFamily="serif"
             android:textColor="@color/white"
             android:textSize="25sp" />
@@ -69,9 +75,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/username1"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="30dp"
             android:layout_marginBottom="10dp"
             android:background="#30ffffff"
             android:fontFamily="serif"
@@ -97,13 +103,13 @@
 
 
         <TextView
-            android:id="@+id/gmail_show"
+            android:id="@+id/email_show"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/gmail1"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="30dp"
             android:layout_marginBottom="10dp"
             android:background="#30ffffff"
             android:fontFamily="serif"
@@ -114,7 +120,7 @@
             android:id="@+id/account_number1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/gmail_show"
+            android:layout_below="@+id/email_show"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
@@ -133,9 +139,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/account_number1"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="30dp"
             android:layout_marginBottom="10dp"
             android:background="#30ffffff"
             android:fontFamily="serif"
@@ -158,16 +164,22 @@
             android:text="Balance :"
             android:textColor="@color/white"
             android:textSize="25sp" />
+
+
         <TextView
             android:id="@+id/balance_show"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#30ffffff"
-            android:layout_margin="10dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="10dp"
             android:layout_below="@id/balance1"
             android:fontFamily="serif"
             android:textColor="@color/white"
             android:textSize="25sp" />
+
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/back_5"
@@ -182,6 +194,7 @@
             android:backgroundTint="@color/material_dynamic_primary80"
             android:fontFamily="serif"
             android:text="@string/Home"
+            android:textColor="#546E7A"
             android:textSize="30sp" />
 
 
